test/files/neg/macro-invalidshape-a.check
Macros_Test_2.scala:2: error: macro body has wrong shape:
 required: macro [<implementation object>].<method name>[[<type args>]]
  def foo(x: Any) = macro 2
      ^
one error found
